# python-project-52

./: .gitignore  README.md  build.sh  conftest.py  db.sqlite3  makefile  pyproject.toml  pytest.ini  ruff.toml  setup.cfg
fixtures/: initial_data.json
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: label_form.html  (+3 more)
labels/tests/: test_labels.py
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py  0002_status_created_at.py
statuses/tests/: test_statuses.py
task_manager/: base_views.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: index.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_task_assignee.py  0004_alter_task_status.py  0005_remove_task_assigned_to.py  0006_remove_task_assignee_task_executor.py  0007_rename_title_task_name_alter_task_executor.py  0010_rename_name_task_title.py
tasks/tests/: test_filters.py  test_tasks.py
tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
users/: decorators.py  forms.py  tests.py  urls.py  views.py
users/tests/: test_users.py
(+55 files in other folders)
