[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["un-f0rgiven <barr85@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.2"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
