[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["un-f0rgiven <barr85@mail.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.2"
gunicorn = "^23.0.0"
django-bootstrap5 = "^24.3"
pytest-django = "^4.9.0"
rollbar = "^1.1.0"
flake8 = "^7.1.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
dj-database-url = "^2.3.0"
django-filter = "^24.3"
isort = "^5.13.2"
ruff = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black" 
line_length = 80
known_third_party = ["flask", "django"]